# questar

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
boo/Questar.Content.Items/: Potions.boo
content/: Makefile.am
content/Questar.Content.Items/: Makefile.am  Potions.boo
data/: questar-ui.xml  questar.glade  terrains.xml
resources/: Makefile.am  items.xml  monsters.xml  questar-ui.xml  questar.glade  terrains.xml
src/: .ConfigurationClient.cs.swp  AboutDialog.cs  Actor.cs  AssemblyInfo.cs.in  CairoColorExtensions.cs  CairoUtilities.cs  ConfigurationClient.cs  Direction.cs  DoNothingAction.cs  EntryPoint.cs  Events.cs  Game.cs  GladeDialog.cs  GladeWindow.cs  Grid.cs  GridInformation.cs  Hero.cs  HitPoints.cs  IAction.cs  IActionable.cs  IActor.cs  IEntity.cs  MainWindow.cs  Makefile.am  Map.cs  MapView.cs  MessageView.cs  Messages.cs  Monster.cs  MoveAction.cs  NativeMethods.cs  Point.cs  PreferenceDialog.cs  ProgramInformation.cs  Rectangle.cs  SchemaEntry.cs  Singleton.cs  StartDialog.cs  Terrain.cs  TerrainManager.cs  (+7 more)
src/Questar/: EntryPoint.cs
src/Questar.Actors/: AbstractActor.cs  Actor.cs  ActorEventArgs.cs  ActorFactory.cs  Hero.cs  HitPoints.cs  Monster.cs  MonsterDefinition.cs  MonsterFactory.cs
src/Questar.Actors.AI/: ArtificialIntelligence.cs  StupidAI.cs
src/Questar.Actors.Actions/: AbstractAction.cs  Action.cs  AttackAction.cs  DoNothingAction.cs  DrinkAction.cs  DropAction.cs  ImpossibleActionException.cs  MoveAction.cs  MoveTowardsTargetAction.cs  PickUpAction.cs  RandomMoveAction.cs
src/Questar.Base/: Game.cs  Messages.cs  NativeMethods.cs  ProgramInformation.cs  World.cs
src/Questar.Configuration/: ConfigurationClient.cs  SchemaEntry.cs  UISchema.cs
src/Questar.Core/: Game.cs  ITurnLoopDriver.cs  IdleTurnLoopDriver.cs  TurnLoop.cs
src/Questar.Extensions/: CheckExtensions.cs  ExtensionMethods.cs
src/Questar.Gui/: AboutDialog.cs  Animation.cs  CharacterDialog.cs  DoubleAnimation.cs  InventoryView.cs  MainWindow.cs  PickupMessageWidget.cs  PreferenceDialog.cs  StartDialog.cs  TangoColors.cs  Tile.cs  TileSet.cs  UIActions.cs  WorldView.cs
src/Questar.Gui.Animation/: DoubleAnimation.cs
src/Questar.Gui.Widgets/: HitPointsChart.cs  HitPointsWidget.cs
src/Questar.Helpers/: CairoColorExtensions.cs  ColorHelper.cs  EventHelper.cs  Makefile.am  RaisedEventException.cs  StringHelper.cs
src/Questar.Items/: AbstractItem.cs  HealthPotion.cs  IDrinkable.cs  Inventory.cs  Item.cs  ItemBuilder.cs  ItemDefinition.cs  ItemFactory.cs
src/Questar.Items.Concrete/: HealthPotion.cs
src/Questar.Maps/: Grid.cs  IEntity.cs  Map.cs  TerrainManager.cs
src/Questar.Maps.Generation/: IMapGenerator.cs  StupidGenerator.cs
src/Questar.Primitives/: AbstractEntity.cs  AbstractEntityFactory.cs  ActorLocation.cs  Direction.cs  Entity.cs  EventList.cs  IEntityFactory.cs  Location.cs  LocationFactory.cs  Makefile.am  MapLocation.cs  NullLocation.cs  Point.cs  Rectangle.cs
src/Questar.Wilderness/: Map.cs  Wilderness.cs
tests/: HitPointsTest.cs  Makefile.am  MockActor.cs  MockItem.cs  TestActor.cs  TestGame.cs  TestHitPoints.cs  TestIActor.cs  TestMap.cs  TestPoint.cs  TestRectangle.cs  TestSchemaEntry.cs  TestSingleton.cs  TestWorld.cs  TestWorldView.cs
tests/Questar.Actors/: ActorFixture.cs
tests/Questar.Items/: InventoryFixture.cs  ItemFactoryFixture.cs  ItemFixture.cs
tests/Questar.MockObjects/: MockActor.cs  MockItem.cs
tests/Questar.UnitTests.Actors/: .ActorFixture.cs.swo  ActorFixture.cs
tests/Questar.UnitTests.Actors.Actions/: PickUpActionFixture.cs
tests/Questar.UnitTests.Extensions/: CheckExtensionsFixture.cs  ExtensionMethodsFixture.cs
tests/Questar.UnitTests.Items/: .InventoryFixture.cs.swo  .ItemFixture.cs.swo  InventoryFixture.cs  ItemFactoryFixture.cs  ItemFixture.cs
tests/Questar.UnitTests.Maps/: MapFixture.cs
tests/Questar.UnitTests.Primitives/: DirectionFixture.cs  EventListFixture.cs  LocationFixture.cs  PointFixture.cs  RectangleFixture.cs
tests/Questar.UnitTests.Wilderness/: WildernessFixture.cs
tilesets/: Makefile.am
tilesets/Default/: Makefile.am
tilesets/ascii/: Makefile.am
