################################################################################
#   Makefile.am: Automake source file for building resources.
#
#   Copyright (C) 2007
#   Written by Mark A. Nicolosi <mark.a.nicolosi@gmail.com>
################################################################################

EXTRA_DIST =                           \
	questar.glade                      \
	questar.svg                        \
	questar-ui.xml                     \
	terrains.xml

