################################################################################
#   Makefile.am: Automake source file for building resources.
#
#   Copyright (C) 2007
#   Written by Mark A. Nicolosi <mark.a.nicolosi@gmail.com>
################################################################################

EXTRA_DIST = \
	items.xml \
	monsters.xml \
	questar.glade \
	questar-ui.xml \
	terrains.xml

MAINTAINERCLEANFILES = \
	Makefile.in

