################################################################################
#   Makefile.am: Automake source file.
#
#   Copyright (C) 2007
#   Written by Mark A. Nicolosi <mark.a.nicolosi@gmail.com>
################################################################################

EXTRA_DIST = \
	Potions.boo

MAINTAINERCLEANFILES = \
	Makefile.in

