################################################################################
#   Makefile.am: Automake source file.
#
#   Copyright (C) 2007
#   Written by Mark A. Nicolosi <mark.a.nicolosi@gmail.com>
################################################################################

EXTRA_DIST =                           \
	default.svg                        \
	flower-1.svg                       \
	grass.svg                          \
	hero.svg                           \
	imp.svg                            \
	tree.svg                           \
	troll.svg

